# spark-sql-mcp-server

./: .changie.yaml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  server.json
.github/workflows/: changelog.yml  publish-mcp-registry.yml  publish.yml  test.yml
docker/: docker-compose.yml  entrypoint.sh  init-data.sql
examples/: claude_desktop_config.json
src/spark_sql_mcp/: __init__.py  config.py  server.py  spark_client.py  tools.py
tests/: conftest.py  test_config.py  test_spark_client.py  test_tools.py
tests/integration/: conftest.py  test_integration.py
