[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spark-sql-mcp-server"
dynamic = ["version"]
description = "MCP server for querying Spark SQL via Thrift/HiveServer2 protocol"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Aidan Correll" }]
keywords = ["mcp", "spark", "sql", "thrift", "hiveserver2", "emr", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "mcp>=1.0.0",
    "pyhive>=0.7.0",
    "thrift>=0.16.0",
    "thrift-sasl>=0.4.3",
    "pure-sasl>=0.6.2",
]

[project.optional-dependencies]
sasl = ["sasl>=0.2.1"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
spark-sql-mcp = "spark_sql_mcp.server:main"

[project.urls]
Homepage = "https://github.com/aidancorrell/spark-sql-mcp-server"
Repository = "https://github.com/aidancorrell/spark-sql-mcp-server"
Issues = "https://github.com/aidancorrell/spark-sql-mcp-server/issues"

[tool.hatch.version]
path = "src/spark_sql_mcp/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/spark_sql_mcp"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
